# flour

./: .gitignore  Makefile  README.md  meson.build
.github/workflows/: build.yml
include/: game.h  item.h  player.h  renderer.h  simplex.h  umath.h  world.h  zip.h
include/math/: umath.h
include/util/: gzip.h  math.h  simplex.h
src/: game.c  item.c  main.c  meson.build  player.c  renderer.c  simplex.c  umath.c  world.c  zip.c
src/math/: umath.c
src/util/: gzip.c  math.c  simplex.c
